@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-16T01:08:55Z",
-  "count_outdated" : 552,
-  "uniques_outdated" : 378,
+  "timestamp" : "2025-07-18T01:08:56Z",
+  "count_outdated" : 553,
+  "uniques_outdated" : 379,
   "count" : 557,
   "uniques" : 383,
   "clones" : [
-    {
-      "timestamp": "2025-07-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-05T00:00:00Z",
       "count": 1,
